// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldsetTime FieldsetTime with is24hr=false calls props.onChange with full time value when hour value is changed 1`] = `
Array [
  "23:15",
]
`;

exports[`FieldsetTime FieldsetTime with is24hr=false calls props.onChange with full time value when minute value is changed 1`] = `
Array [
  "12:11",
]
`;

exports[`FieldsetTime FieldsetTime with is24hr=false renders expected elements 1`] = `
<fieldset
  className="fauxInput fauxInput--time"
>
  <Flex
    noGutters={true}
  >
    <FlexItem
      shrink={true}
    >
      <input
        className="field--reset align--center timeInput-hours"
        id="mocktime-hour"
        max={12}
        min={1}
        name="hour"
        onChange={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        pattern="\\\\d*"
        type="number"
        value="12"
      />
       
    </FlexItem>
    <FlexItem
      className="align--center"
      shrink={true}
    >
      :
    </FlexItem>
    <FlexItem
      shrink={true}
    >
      <input
        className="field--reset align--center timeInput-minutes"
        id="mocktime-minute"
        max={59}
        min={0}
        name="minute"
        onChange={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        pattern="\\\\d*"
        type="number"
        value="15"
      />
    </FlexItem>
    <FlexItem
      className="timeInput-meridianContainer display--flex flex--column flex--center"
      shrink={true}
    >
      <SelectInput
        className="timeInput-meridian flush--all border--none field--reset padding--left"
        id="mocktime-meridian"
        name="mwc-meridian"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "AM",
              "value": "0",
            },
            Object {
              "label": "PM",
              "value": "1",
            },
          ]
        }
        requiredText="*"
        value="1"
      />
    </FlexItem>
  </Flex>
</fieldset>
`;

exports[`FieldsetTime FieldsetTime with is24hr=true calls props.onChange with full time value when hour value is changed 1`] = `
Array [
  "11:15",
]
`;

exports[`FieldsetTime FieldsetTime with is24hr=true calls props.onChange with full time value when minute value is changed 1`] = `
Array [
  "12:11",
]
`;

exports[`FieldsetTime FieldsetTime with is24hr=true renders expected elements 1`] = `
<fieldset
  className="fauxInput fauxInput--time"
>
  <Flex
    noGutters={true}
  >
    <FlexItem
      shrink={true}
    >
      <input
        className="field--reset align--center timeInput-hours"
        id="mocktime-hour"
        max={23}
        min={0}
        name="hour"
        onChange={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        pattern="\\\\d*"
        type="number"
        value="12"
      />
       
    </FlexItem>
    <FlexItem
      className="align--center"
      shrink={true}
    >
      :
    </FlexItem>
    <FlexItem
      shrink={true}
    >
      <input
        className="field--reset align--center timeInput-minutes"
        id="mocktime-minute"
        max={59}
        min={0}
        name="minute"
        onChange={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        pattern="\\\\d*"
        type="number"
        value="15"
      />
    </FlexItem>
  </Flex>
</fieldset>
`;
